src/objects/AB2__FieldValueMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This creates a Map of AdBook Fields and their Values</description>
    <fields>
        <fullName>AB2__AdBookId__c</fullName>
        <label>AdBookId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FieldValueMap</label>
</CustomObject>